[package]
name = "sassy-goals"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.16"
actix-web = "4.3"
actix-web-static-files = "4.0"
static-files = "0.2"
shuttle-actix-web = "0.16"
tokio = "1.28"
askama = "0.12"
thiserror = "1.0"
askama_actix = "0.14"

[build-dependencies]
static-files = "0.2"
