[package]
name = "silly-goals"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3", features = ["rustls", "compress-brotli", "compress-zstd", "cookies"]}
actix-web-static-files = "4.0"
static-files = "0.2"
tokio = "1.28"
askama = "0.12"
thiserror = "1.0"
askama_actix = "0.14"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "json", "chrono", "offline", "uuid"]}
lettre = { version = "0.10.2", features = [
  "smtp-transport",
  "tokio1",
  "tokio1-native-tls",
] }
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["redis-rs-session", "redis-rs-tls-session"] }
redis_rs = "0.9"
webauthn-rs = { version = "0.4.8", features = [
  "danger-allow-state-serialisation",
] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
base64 = "0.21"
anyhow = "1.0"
serde_json = "1.0.96"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"]}

[build-dependencies]
static-files = "0.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
